--- a/charts/incubator/youtrack/values.yaml
+++ b/charts/incubator/youtrack/values.yaml
@@ -11,7 +11,7 @@ podSecurityContext:
   runAsUser: 13001
 
 youtrack:
-  baseURL: ""
+  baseURL: http://localhost:18080
   webHooksBaseUrl: ""
   hubURL: ""
   defaultPage: /dashboard
