--- a/charts/stable/gotify/Chart.yaml
+++ b/charts/stable/gotify/Chart.yaml
@@ -4,6 +4,10 @@ dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.1.2
+  - condition: postgresql.enabled
+    name: postgresql
+    repository: https://charts.truecharts.org/
+    version: 11.0.17
 deprecated: false
 description: A simple server for sending and receiving messages.
 home: https://truecharts.org/charts/stable/gotify
