--- a/charts/stable/cloudflareddns/questions.yaml
+++ b/charts/stable/cloudflareddns/questions.yaml
@@ -13,6 +13,12 @@ questions:
       additional_attrs: true
       type: dict
       attrs:
+        - variable: api_key
+          label: CF API Key
+          schema:
+            type: string
+            private: true
+            default: ""
         - variable: user
           label: CF User
           description: Cloudflare Username (eg. your.cf.email@example.com)
@@ -21,12 +27,6 @@ questions:
             default: ""
         - variable: api_token
           label: CF API Token
-          schema:
-            type: string
-            private: true
-            default: ""
-        - variable: api_key
-          label: CF API Key
           schema:
             type: string
             private: true
@@ -71,7 +71,7 @@ questions:
                 description: dig-opendns.com
         - variable: detect_override
           label: Detection mode Override
-          description: If you want to set DETECTION_MODE to 'local:eth0' for a local interface, this will override the dropdown selection
+          description: If you want to set Detection Mode to 'local:eth0' for a local interface, this will override the dropdown selection
           schema:
             type: string
             default: ""
