--- a/charts/stable/gotify/questions.yaml
+++ b/charts/stable/gotify/questions.yaml
@@ -8,85 +8,169 @@ questions:
 # Include{replicas}
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
-  - variable: secretEnv
-    group: "App Configuration"
-    label: "Image Secrets"
+  - variable: gotify
+    group: App Configuration
+    label: Gotify Configuration
     schema:
       additional_attrs: true
       type: dict
       attrs:
         - variable: user
-          label: "user"
-          description: "Sets the user env var"
-          schema:
-            type: string
-            default: "admin"
-        - variable: pass
-          label: "pass"
-          description: "Sets the pass env var"
-          schema:
-            type: string
-            default: "changeme"
-  - variable: env
-    group: "App Configuration"
-    label: "Image Environment"
-    schema:
-      additional_attrs: true
-      type: dict
-      attrs:
-        - variable: GOTIFY_SERVER_KEEPALIVEPERIODSECONDS
-          label: "GOTIFY_SERVER_KEEPALIVEPERIODSECONDS"
-          description: "Sets the GOTIFY_SERVER_KEEPALIVEPERIODSECONDS env var"
-          schema:
-            type: int
-            default: 0
-        - variable: GOTIFY_SERVER_LISTENADDR
-          label: "GOTIFY_SERVER_LISTENADDR"
-          description: "Sets the GOTIFY_SERVER_LISTENADDR env var"
+          label: Username (First install only)
+          description: Sets the default admin user.
           schema:
             type: string
             default: ""
-        - variable: GOTIFY_SERVER_SSL_ENABLED
-          label: "GOTIFY_SERVER_SSL_ENABLED"
-          description: "Sets the GOTIFY_SERVER_SSL_ENABLED env var"
-          schema:
-            type: boolean
-            default: false
-        - variable: GOTIFY_SERVER_RESPONSEHEADERS
-          label: "GOTIFY_SERVER_RESPONSEHEADERS"
-          description: "Sets the GOTIFY_SERVER_RESPONSEHEADERS env var"
+            required: true
+        - variable: pass
+          label: Password (First install only)
+          description: Sets the default admin pass.
           schema:
             type: string
-            default: "X-Custom-Header: \"custom value\""
-        - variable: GOTIFY_SERVER_STREAM_PINGPERIODSECONDS
-          label: "GOTIFY_SERVER_STREAM_PINGPERIODSECONDS"
-          description: "Sets the GOTIFY_SERVER_STREAM_PINGPERIODSECONDS env var"
+            default: ""
+            required: true
+            private: true
+        - variable: registration
+          label: Registration
+          description: Enable / Disable user registration.
           schema:
-            type: int
-            default: 45
-        - variable: GOTIFY_PASSSTRENGTH
-          label: "GOTIFY_PASSSTRENGTH"
-          description: "Sets the GOTIFY_PASSSTRENGTH env var"
+            type: boolean
+            default: true
+        - variable: password_strength
+          label: Password Strength
+          description: The bcrypt password strength (higher = better but also slower).
           schema:
             type: int
             default: 10
-        - variable: GOTIFY_UPLOADEDIMAGESDIR
-          label: "GOTIFY_UPLOADEDIMAGESDIR"
-          description: "Sets the GOTIFY_UPLOADEDIMAGESDIR env var"
+        - variable: show_advanced
+          label: Show Advanced Options
+          description: Shows advanced options that should be changed only if you know what you are doing
           schema:
-            type: string
-            default: "data/images"
-        - variable: GOTIFY_PLUGINSDIR
-          label: "GOTIFY_PLUGINSDIR"
-          description: "Sets the GOTIFY_PLUGINSDIR env var"
+            type: boolean
+            default: false
+            show_subquestions_if: true
+            subquestions:
+              - variable: response_headers
+                label: Response Headers
+                description: Response headers are added to every response
+                schema:
+                  type: list
+                  default: []
+                  items:
+                    - variable: response_header_entry
+                      label: Response Header Entry
+                      schema:
+                        additional_attrs: true
+                        type: dict
+                        attrs:
+                          - variable: key
+                            label: Header Key
+                            schema:
+                              type: string
+                              default: ""
+                              required: true
+                          - variable: value
+                            label: Header Value
+                            schema:
+                              type: string
+                              default: ""
+                              required: true
+              - variable: keep_alive_period_seconds
+                label: Keep Alive Period Seconds
+                description: Set the interval in which keepalive packets will be sent. 0 = use Go default (15s); -1 = disable keepalive; Only change this value if you know what you are doing.
+                schema:
+                  type: int
+                  required: true
+                  default: 0
+        - variable: stream
+          label: Stream
           schema:
-            type: string
-            default: "data/plugins"
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: show_advanced
+                label: Show Advanced Options
+                description: Shows advanced options that should be changed only if you know what you are doing
+                schema:
+                  type: boolean
+                  default: false
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: ping_period_seconds
+                      label: Ping Period Seconds
+                      description: The interval in which websocket pings will be sent. Only change this value if you know what you are doing.
+                      schema:
+                        type: int
+                        required: true
+                        default: 45
+                    - variable: allowed_origins
+                      label: Allowed Origins
+                      description: Allowed origins for websocket connections (Same Origin is always allowed, Default is Same Origin)
+                      schema:
+                        type: list
+                        default: []
+                        items:
+                          - variable: allowed_origin_entry
+                            label: Allowed Origin Entry
+                            schema:
+                              type: string
+                              default: ""
+                              required: true
+        - variable: cors
+          label: CORS
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: show_advanced
+                label: Show Advanced Options
+                description: Shows advanced options that should be changed only if you know what you are doing
+                schema:
+                  type: boolean
+                  default: false
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: allowed_origins
+                      label: Allowed Origins
+                      schema:
+                        type: list
+                        default: []
+                        items:
+                          - variable: allowed_origin_entry
+                            label: Allowed Origin Entry
+                            schema:
+                              type: string
+                              required: true
+                              default: ""
+                    - variable: allowed_methods
+                      label: Allowed Methods
+                      schema:
+                        type: list
+                        default: []
+                        items:
+                          - variable: allowed_method_entry
+                            label: Allowed Method Entry
+                            schema:
+                              type: string
+                              default: ""
+                              required: true
+                    - variable: allowed_headers
+                      label: Allowed Headers
+                      schema:
+                        type: list
+                        default: []
+                        items:
+                          - variable: allowed_header_entry
+                            label: Allowed Header Entry
+                            schema:
+                              type: string
+                              default: ""
+                              required: true
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
-          label: "Main Service"
-          description: "The Primary service on which the healthcheck runs, often the webUI"
+          label: Main Service
+          description: The Primary service on which the healthcheck runs, often the webUI
           schema:
             additional_attrs: true
             type: dict
@@ -94,14 +178,14 @@ questions:
 # Include{serviceSelectorLoadBalancer}
 # Include{serviceSelectorExtras}
                     - variable: main
-                      label: "Main Service Port Configuration"
+                      label: Main Service Port Configuration
                       schema:
                         additional_attrs: true
                         type: dict
                         attrs:
                           - variable: port
-                            label: "Port"
-                            description: "This port exposes the container port on the service"
+                            label: Port
+                            description: This port exposes the container port on the service
                             schema:
                               type: int
                               default: 10084
@@ -112,8 +196,8 @@ questions:
 # Include{serviceList}
 # Include{persistenceRoot}
         - variable: data
-          label: "App Data Storage"
-          description: "Stores the Application Data."
+          label: App Data Storage
+          description: Stores the Application Data.
           schema:
             additional_attrs: true
             type: dict
@@ -122,7 +206,7 @@ questions:
 # Include{persistenceList}
 # Include{ingressRoot}
         - variable: main
-          label: "Main Ingress"
+          label: Main Ingress
           schema:
             additional_attrs: true
             type: dict
@@ -134,41 +218,41 @@ questions:
 # Include{security}
 # Include{securityContextAdvancedRoot}
               - variable: privileged
-                label: "Privileged mode"
+                label: Privileged mode
                 schema:
                   type: boolean
                   default: false
               - variable: readOnlyRootFilesystem
-                label: "ReadOnly Root Filesystem"
+                label: ReadOnly Root Filesystem
                 schema:
                   type: boolean
                   default: true
               - variable: allowPrivilegeEscalation
-                label: "Allow Privilege Escalation"
+                label: Allow Privilege Escalation
                 schema:
                   type: boolean
                   default: false
               - variable: runAsNonRoot
-                label: "runAsNonRoot"
+                label: runAsNonRoot
                 schema:
                   type: boolean
                   default: true
 # Include{podSecurityContextRoot}
         - variable: runAsUser
-          label: "runAsUser"
-          description: "The UserID of the user running the application"
+          label: runAsUser
+          description: The UserID of the user running the application
           schema:
             type: int
             default: 568
         - variable: runAsGroup
-          label: "runAsGroup"
-          description: "The groupID this App of the user running the application"
+          label: runAsGroup
+          description: The groupID this App of the user running the application
           schema:
             type: int
             default: 568
         - variable: fsGroup
-          label: "fsGroup"
-          description: "The group that should own ALL storage."
+          label: fsGroup
+          description: The group that should own ALL storage.
           schema:
             type: int
             default: 568
