--- a/charts/stable/cloudflareddns/values.yaml
+++ b/charts/stable/cloudflareddns/values.yaml
@@ -20,16 +20,16 @@ cloudflareddns:
   detect_mode: dig-whoami.cloudflare
   detect_override: ""
   log_level: 3
-  host_zone_record:
-    - domain: example.com
-      zone: example.com
-      record: A
-    - domain: foobar.com
-      zone: foobar.com
-      record: A
-    - domain: foobar.com
-      zone: foobar.com
-      record: AAAA
+  host_zone_record: []
+    # - domain: example.com
+    #   zone: example.com
+    #   record: A
+    # - domain: foobar.com
+    #   zone: foobar.com
+    #   record: A
+    # - domain: foobar.com
+    #   zone: foobar.com
+    #   record: AAAA
 
 probes:
   liveness:
