fix(cloudflareddns) fix record type variable list (#6001)
* fix(cloudflareddns) fix record type variable list

* .

* Update charts/stable/cloudflareddns/values.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

--- a/charts/stable/cloudflareddns/values.yaml
+++ b/charts/stable/cloudflareddns/values.yaml
@@ -21,15 +21,16 @@ cloudflareddns:
   detect_override: ""
   log_level: 3
   host_zone_record:
-    - domain: example.com
-      zone: example.com
-      record: A
-    - domain: foobar.com
-      zone: foobar.com
-      record: A
-    - domain: foobar.com
-      zone: foobar.com
-      record: AAAA
+    []
+    # - domain: example.com
+    #   zone: example.com
+    #   record: A
+    # - domain: foobar.com
+    #   zone: foobar.com
+    #   record: A
+    # - domain: foobar.com
+    #   zone: foobar.com
+    #   record: AAAA
 
 probes:
   liveness:
