some initial changes

--- a/charts/incubator/jenkins/values.yaml
+++ b/charts/incubator/jenkins/values.yaml
@@ -14,7 +14,7 @@ securityContext:
 
 jenkins:
   java_opts: []
-  opts: []
+  jenkins_java_opts: []
   plugins_force_upgrade: true
   upgrade_if_no_marker: true
 
