--- a/charts/incubator/jenkins/values.yaml
+++ b/charts/incubator/jenkins/values.yaml
@@ -13,6 +13,7 @@ podSecurityContext:
 
 jenkins:
   java_opts: []
+  jenkins_opts: []
   jenkins_java_opts: []
   plugins_force_upgrade: false
   upgrade_if_no_marker: false
