--- a/charts/stable/jupyter/Chart.yaml
+++ b/charts/stable/jupyter/Chart.yaml
@@ -5,7 +5,7 @@ dependencies:
     repository: https://library-charts.truecharts.org
     version: 11.1.2
 deprecated: false
-description: "Jupyter a web based IDE"
+description: Jupyter a web based IDE
 home: https://truecharts.org/charts/incubator/jupyter
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/jupyter.png
 keywords:
@@ -22,7 +22,7 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/jupyter
   - https://github.com/jupyter/docker-stacks
 type: application
-version: 2.0.7
+version: 3.0.0
 annotations:
   truecharts.org/catagories: |
     - Cloud
