--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -180,13 +180,18 @@
     },
     {
       "matchDatasources": ["docker"],
+      "versioning": "regex:^v(?<major>\\d+)-(?<minor>\\d+)$",
+      "matchPackagePrefixes": ["tccr.io/truecharts/jupyter-"],
+    },
+    {
+      "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>\\d{1})(?<minor>\\d{1})(?<patch>\\d{2})$",
-      "matchPackagePrefixes": ["tccr.io/truecharts/jitsi"],
+      "matchPackagePrefixes": ["tccr.io/truecharts/jitsi-"],
     },
     {
       "matchDatasources": ["docker"],
       "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)_\\d+$",
-      "matchPackagePrefixes": ["tccr.io/truecharts/immich"],
+      "matchPackagePrefixes": ["tccr.io/truecharts/immich-"],
     }
   ]
 }
