fix(jupyter): fix image names

--- a/charts/stable/jupyter/questions.yaml
+++ b/charts/stable/jupyter/questions.yaml
@@ -13,19 +13,19 @@ questions:
       enum:
         - value: image
           description: Base Notebook
-        - value: imageMinimal
+        - value: minimalImage
           description: Minimal Notebook
-        - value: imageR
+        - value: rImage
           description: R Notebook
-        - value: imageScipy
+        - value: scipyImage
           description: Scipy Notebook
-        - value: imageTensorflow
+        - value: tensorflowImage
           description: Tensorflow Notebook
-        - value: imageDataScience
+        - value: datascienceImage
           description: Data Science Notebook
-        - value: imagePySpark
+        - value: pysparkImage
           description: Pyspark Notebook
-        - value: imageAllSpark
+        - value: allsparkImage
           description: All Spark Notebook
 # Include{controller}
 # Include{replicas}
