--- a/charts/incubator/jenkins/values.yaml
+++ b/charts/incubator/jenkins/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: jenkins/jenkins
+  repository: tccr.io/truecharts/jenkins
   pullPolicy: IfNotPresent
-  tag: 2.385-jdk17@sha256:12898836cbc477a5d54bd953132b36669b0567c3ee2ef6b30db503b5d596a345
+  tag: 2.384.0@sha256:8c2398864143f4869c1ee82e12afb0a3ce6ce6443c032067a73a0cf4aa646d2a
 
 podSecurityContext:
   runAsGroup: 1000
