fix(metube) separate config/download dirs.

--- a/charts/stable/metube/Chart.yaml
+++ b/charts/stable/metube/Chart.yaml
@@ -4,7 +4,7 @@ dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.1.2
-description: Web GUI for youtube-dl (using the yt-dlp fork) with playlist support. Allows you to download videos from YouTube and dozens of other sites
+description: Web GUI for youtube-dl.
 home: https://truecharts.org/charts/stable/metube
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/metube.png
 keywords:
@@ -18,7 +18,7 @@ name: metube
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/metube
   - https://github.com/alexta69/metube
-version: 4.0.7
+version: 5.0.0
 annotations:
   truecharts.org/catagories: |
     - media
