--- a/charts/stable/metube/values.yaml
+++ b/charts/stable/metube/values.yaml
@@ -20,6 +20,9 @@ persistence:
   config:
     enabled: true
     mountPath: /config
+  downloads:
+    enabled: true
+    mountPath: /downloads
 
 portal:
   enabled: true
