--- a/charts/stable/metube/questions.yaml
+++ b/charts/stable/metube/questions.yaml
@@ -16,7 +16,7 @@ questions:
       type: dict
       attrs:
         - variable: OUTPUT_TEMPLATE
-          label: Ouput Template
+          label: Output Template
           description: The template for the filenames of the downloaded videos
           schema:
             type: string
