--- a/charts/incubator/plex-meta-manager/questions.yaml
+++ b/charts/incubator/plex-meta-manager/questions.yaml
@@ -34,7 +34,7 @@ questions:
             default: false
             show_subquestions_if: false
             subquestions:
-              - variable: time
+              - variable: times
                 label: PMM Time
                 description: "Specify the time of day that Plex Meta Manager will run. Format: HH:MM"
                 schema:
