--- a/charts/incubator/checkmk/values.yaml
+++ b/charts/incubator/checkmk/values.yaml
@@ -6,6 +6,10 @@ image:
 securityContext:
   readOnlyRootFilesystem: false
 
+podSecurityContext:
+  runAsUser: 0
+  runAsGroup: 0
+
 service:
   main:
     ports:
