--- a/charts/incubator/plex-meta-manager/questions.yaml
+++ b/charts/incubator/plex-meta-manager/questions.yaml
@@ -46,7 +46,7 @@ questions:
                       schema:
                         type: string
                         required: true
-                        default: "00:00"
+                        default: ""
               - variable: no_countdown
                 label: PMM No Countdown
                 description: Run without displaying a countdown to the next scheduled run.
