--- a/charts/incubator/checkmk/questions.yaml
+++ b/charts/incubator/checkmk/questions.yaml
@@ -8,6 +8,40 @@ questions:
 # Include{replicas}
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
+  - variable: cmk
+    group: App Configuration
+    label: Check-mk Configuration
+    schema:
+      additional_attrs: true
+      type: dict
+      attrs:
+        - variable: password
+          label: Initial Password
+          description: Sets the initial password for cmkadmin user
+          schema:
+            type: string
+            required: true
+            private: true
+            default: ""
+        - variable: site_id
+          label: Site ID
+          description: Sets the siteID
+          schema:
+            type: string
+            required: true
+            default: cmk
+        - variable: livestatus_tcp
+          label: Livestatus TCP
+          description: Enables the livestatus TCP
+          schema:
+            type: boolean
+            default: false
+        - variable: mail_relay_host
+          label: Mail Relay Host
+          description: Sets the Mail Relay Host
+          schema:
+            type: string
+            default: ""
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
@@ -33,19 +67,51 @@ questions:
                               default: 15000
                               required: true
         - variable: receiver
-          label: Agent Receiver
-          description: The service recieves data from agents
+          label: Receiver Service
+          description: The Receiver service
           schema:
             additional_attrs: true
             type: dict
             attrs:
-              - variable: port
-                label: Port
-                description: This port exposes the container port on the service
-                schema:
-                  type: int
-                  default: 18000
-                  required: true
+# Include{serviceSelectorLoadBalancer}
+# Include{serviceSelectorExtras}
+                    - variable: receiver
+                      label: Agent Receiver
+                      description: The service recieves data from agents
+                      schema:
+                        additional_attrs: true
+                        type: dict
+                        attrs:
+                          - variable: port
+                            label: Port
+                            description: This port exposes the container port on the service
+                            schema:
+                              type: int
+                              default: 18000
+                              required: true
+        - variable: livestatus_tcp
+          label: Livestatus TCP Service
+          description: The Livestatus TCP service
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+# Include{serviceSelectorLoadBalancer}
+# Include{serviceSelectorExtras}
+                    - variable: livestatus_tcp
+                      label: Livestatus TCP
+                      description: The service recieves data from agents
+                      schema:
+                        additional_attrs: true
+                        type: dict
+                        attrs:
+                          - variable: port
+                            label: Port
+                            description: This port exposes the container port on the service
+                            schema:
+                              type: int
+                              default: 6557
+                              required: true
 # Include{serviceExpertRoot}
             default: false
 # Include{serviceExpert}
