--- a/charts/incubator/checkmk/values.yaml
+++ b/charts/incubator/checkmk/values.yaml
@@ -46,13 +46,24 @@ service:
 
 probes:
   liveness:
-    path: /cmk/check_mk
-
+    spec:
+      exec:
+        command:
+          - /bin/sh
+          - -c
+          - omd status
   readiness:
-    path: /cmk/check_mk
-
+    exec:
+      command:
+        - /bin/sh
+        - -c
+        - omd status
   startup:
-    path: /cmk/check_mk
+    exec:
+      command:
+        - /bin/sh
+        - -c
+        - omd status
 
 persistence:
   config:
@@ -61,7 +72,10 @@ persistence:
   cmk-temp:
     enabled: true
     type: emptyDir
-    mountPath: /opt/omd/sites/cmk/tmp
+    mountPath: /omd/sites/cmk/tmp
+  cmk-cron:
+    enabled: true
+    mountPath: /var/spool/cron/crontabs
 
 portal:
   enabled: true
