fix(checkmk): use emptydir

--- a/charts/incubator/checkmk/values.yaml
+++ b/charts/incubator/checkmk/values.yaml
@@ -75,6 +75,7 @@ persistence:
     mountPath: /omd/sites/cmk/tmp
   cmk-cron:
     enabled: true
+    type: emptyDir
     mountPath: /var/spool/cron/crontabs
 
 portal:
