--- a/charts/stable/shiori/values.yaml
+++ b/charts/stable/shiori/values.yaml
@@ -1,27 +1,15 @@
 image:
-  repository: tccr.io/truecharts/shiori
+  repository: ghcr.io/go-shiori/shiori
   pullPolicy: IfNotPresent
-  tag: version-v1.5.0@sha256:6c6331888c9a5162def49b6212327242f7f5c96e2d5a1bb031f79321cc1c0549
+  tag: v1.5.3@sha256:18dd8f354d6f23919c55ed7e63b85747659dad81173766146e81dd051b71c0df
 
 securityContext:
-  allowPrivilegeEscalation: true
-  runAsNonRoot: false
+  runAsNonRoot: true
+  readOnlyRootFilesystem: true
 
 podSecurityContext:
-  runAsUser: 0
-  runAsGroup: 0
-
-env:
-  SHIORI_PG_NAME: "{{ .Values.postgresql.postgresqlDatabase }}"
-  SHIORI_PG_USER: "{{ .Values.postgresql.postgresqlUsername }}"
-  SHIORI_PG_PASS:
-    secretKeyRef:
-      name: dbcreds
-      key: postgresql-password
-  SHIORI_PG_HOST:
-    secretKeyRef:
-      name: dbcreds
-      key: plainhost
+  runAsUser: 568
+  runAsGroup: 568
 
 service:
   main:
@@ -33,13 +21,13 @@ service:
 persistence:
   data:
     enabled: true
-    mountPath: "/data"
+    mountPath: /data
   varrun:
     enabled: true
 
 postgresql:
   enabled: true
-  existingSecret: "dbcreds"
+  existingSecret: dbcreds
   postgresqlUsername: shiori
   postgresqlDatabase: shiori
 
