--- a/charts/stable/shiori/templates/common.yaml
+++ b/charts/stable/shiori/templates/common.yaml
@@ -1,1 +1,8 @@
-{{ include "tc.common.loader.all" . }}
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{/* Render secret */}}
+{{- include "shiori.secret" . }}
+
+{{/* Render the templates */}}
+{{ include "tc.common.loader.apply" . }}
