--- a/charts/stable/shiori/values.yaml
+++ b/charts/stable/shiori/values.yaml
@@ -10,7 +10,9 @@ securityContext:
 podSecurityContext:
   runAsUser: 568
   runAsGroup: 568
-
+envFrom:
+  - secretRef:
+      name: "{{ include "tc.common.names.fullname" . }}-secret"
 service:
   main:
     ports:
