--- a/charts/stable/shiori/values.yaml
+++ b/charts/stable/shiori/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/go-shiori/shiori
+  repository: tccr.io/truecharts/shiori
   pullPolicy: IfNotPresent
-  tag: v1.5.3@sha256:18dd8f354d6f23919c55ed7e63b85747659dad81173766146e81dd051b71c0df
+  tag: 1.5.3@sha256:99696bfc727ab1792297cba1e0ba755953bc0cfa38f2c19532c56d68985479a8
 
 envFrom:
   - secretRef:
